# Bitags

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
bitags/: __init__.py  _barcoding.py  _classification.py  _manipulation.py  _read_io.py  _schema.py  _trimming.py  _typing.py  classification.py  io.py  patterns.py  read_io.py  tagging.py  trimming.py  visualization.py  viz.py  workflows.py
bitags/cli/: __init__.py  barcode.py  classify.py  embed.py  fastq_to_parquet.py  filter.py  parquet_to_fastq.py  split.py  trim.py  visualize.py
src/: barcodes.rs  fastq_io.rs  file_ops.rs  lib.rs  main.rs  reads.rs  tags.rs
src/barcodes/: builder.rs  matching.rs  mod.rs  overlap.rs
tests/: conftest.py  test_barcoding.py  test_classification.py  test_cli.py  test_manipulation.py  test_read_io.py  test_trimming.py
tests/data/: paired_tagged_reads.tsv  trimming_cases.tsv
