[package]
name = "bitags"
version = "0.1.7"
edition = "2024"

[lib]
name = "bitags"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py312"] }
pyo3-polars = { version = "0.26", features = ["derive", "dtype-struct"] }
serde = { version = "1", features = ["derive"] }
